--- a/index.html
+++ b/index.html
@@ -473,7 +473,7 @@
           </span>
         </label>
 
-        <button class="register-form-button">Отправить</button>
+        <button type="submit" class="register-form-button">Отправить</button>
 
       </form>
     </div>
