--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     crossorigin="anonymous" referrerpolicy="no-referrer" />
   <!--Normalize ends-->
   <link rel="stylesheet" href="./css/main.min.css" />
-  <link rel="stylesheet" href="./css/styles.css" />
+  <!--<link rel="stylesheet" href="./css/styles.css" /> -->
 </head>
 
 <body data-page>
